# kmeans

./: .gitignore  README.md
datasets/: README.md  gen_fig_for_paper.py  generate_data.py  plot.py
datasets/2d/100000_samples_3_centers/convergence/: conv_0.csv  conv_1.csv  conv_10.csv  conv_11.csv  conv_12.csv  conv_2.csv  conv_3.csv  conv_4.csv  conv_5.csv  conv_6.csv  conv_7.csv  conv_8.csv  conv_9.csv
datasets/2d/10000_samples_3_centers/: data.csv
datasets/2d/1000_samples_3_centers/: data.csv
datasets/2d/2000_samples_3_centers/: data.csv
datasets/2d/50000_samples_3_centers/: centroids.csv  data.csv
datasets/2d/5000_samples_3_centers/: data.csv
datasets/2d/500_samples_3_centers/: data.csv
datasets/3d/10000_samples_3_centers/: data.csv
datasets/3d/1000_samples_3_centers/: data.csv
datasets/3d/2000_samples_3_centers/: data.csv
datasets/3d/50000_samples_3_centers/: data.csv
datasets/3d/5000_samples_3_centers/: centroids.csv  data.csv
datasets/3d/500_samples_3_centers/: data.csv
include/: container.h  container_io.h  sample.h  utils.h
parallel/: Makefile  par.cpp  par_kmeans.h  thread_pool.h
parallel/test/: README.md
parallel/test/2d/: CMakeLists.txt
parallel/test/2d/1000/: full_iterations.cpp  with_epsilon.cpp
parallel/test/2d/10000/: full_iterations.cpp  with_epsilon.cpp
parallel/test/2d/100000/: full_iterations.cpp  with_epsilon.cpp
parallel/test/2d/2000/: full_iterations.cpp  with_epsilon.cpp
parallel/test/2d/500/: full_iterations.cpp  with_epsilon.cpp
parallel/test/2d/5000/: full_iterations.cpp  with_epsilon.cpp
parallel/test/2d/50000/: full_iterations.cpp  with_epsilon.cpp
parallel/test/3d/: CMakeLists.txt
parallel/test/3d/1000/: full_iterations.cpp  with_epsilon.cpp
parallel/test/3d/10000/: full_iterations.cpp  with_epsilon.cpp
parallel/test/3d/100000/: full_iterations.cpp  with_epsilon.cpp
parallel/test/3d/2000/: full_iterations.cpp  with_epsilon.cpp
parallel/test/3d/500/: full_iterations.cpp  with_epsilon.cpp
parallel/test/3d/5000/: full_iterations.cpp  with_epsilon.cpp
parallel/test/3d/50000/: full_iterations.cpp  with_epsilon.cpp
sequential/: Makefile  kmeans.h  seq.cpp
sequential/test/: README.md
sequential/test/2d/: CMakeLists.txt
sequential/test/2d/1000/: full_iterations.cpp  with_epsilon.cpp
sequential/test/2d/10000/: full_iterations.cpp  with_epsilon.cpp
sequential/test/2d/100000/: full_iterations.cpp  with_epsilon.cpp
sequential/test/2d/2000/: full_iterations.cpp  with_epsilon.cpp
sequential/test/2d/500/: full_iterations.cpp  with_epsilon.cpp
sequential/test/2d/5000/: full_iterations.cpp  with_epsilon.cpp
sequential/test/2d/50000/: full_iterations.cpp  with_epsilon.cpp
sequential/test/3d/: CMakeLists.txt
sequential/test/3d/1000/: full_iterations.cpp  with_epsilon.cpp
sequential/test/3d/10000/: full_iterations.cpp  with_epsilon.cpp
sequential/test/3d/100000/: full_iterations.cpp  with_epsilon.cpp
sequential/test/3d/2000/: full_iterations.cpp  with_epsilon.cpp
sequential/test/3d/500/: full_iterations.cpp  with_epsilon.cpp
sequential/test/3d/5000/: full_iterations.cpp  with_epsilon.cpp
sequential/test/3d/50000/: full_iterations.cpp  with_epsilon.cpp
